B26: add endpoint for the shopping list
